fix: improve round progression logic and final match draw - Fixed issue with Collections.shuffle on immutable lists during tests - Implemented automatic round progression after all battles are completed - Ensured only valid winners advance and pending battles are handled properly - Updated unit test to correctly mock repository save call - Successfully validated functionality through Swagger and unit tests